bot tweaks and /games GET endpoint for stats and testing
