# Server/swagger.yaml
@@ -92,6 +92,29 @@ components:
         - 1
       items:
         type: int32
+    WinningSequence:
+      type: object
+      description: A game winning sequence
+      properties:
+        type:
+          type: string
+          enum:
+            - row
+            - col
+            - diagDR
+            - diagDL
+          description: >-
+            The type of winning sequence. One of 'row', 'col', 'diagDR' and
+            'diagDL' for row, column, diagonal down and to the right and
+            diagonal down and to the left.
+          example: row
+        sequence:
+          type: array
+          description: >-
+            The winning sequence as a length 5 array of points on the game
+            board.
+          items:
+            $ref: '#/components/schemas/BoardPosition'
     GameState:
       type: object
       description: >-
@@ -151,10 +174,11 @@ components:
             Player won the game.
           example: 2
         winningSequence:
-          type: array
-          description: The array of board positions that represent the winning sequence.
-          items:
-            $ref: '#/components/schemas/BoardPosition'
+          type: object
+          description: >-
+            The winning sequence object, containing the type of win and a length
+            5 array of winning points on the game board.
+          $ref: '#/components/schemas/WinningSequence'
     User:
       type: object
       description: User information
@@ -170,29 +194,35 @@ components:
           type: string
           description: The player's color
           example: ff0000
-    WinningSequence:
+    GameOutcome:
       type: object
-      description: A game winning sequence
+      description: The data set for the outcome of a game
+      required:
+        - handsPlayed
+        - winner
       properties:
-        type:
-          type: string
+        handsPlayed:
+          type: int32
+          description: >-
+            The number of hands played in this game. Maximum is 104 as a maximum
+            of 52 x 2 cards played.
+          example: 65
+        winner:
+          type: int32
           enum:
-            - row
-            - col
-            - diagDR
-            - diagDL
+            - 0
+            - 1
+            - 2
           description: >-
-            The type of winning sequence. One of 'row', 'col', 'diagDR' and
-            'diagDL' for row, column, diagonal down and to the right and
-            diagonal down and to the left.
-          example: row
-        sequence:
-          type: array
+            The winner of the game. Either 0 represening no winner (a draw), 1
+            representing Player 1 or 2 represening Player 2
+          example: 1
+        winningSequence:
+          type: object
           description: >-
-            The winning sequence as a length 5 array of points on the game
-            board.
-          items:
-            $ref: '#/components/schemas/BoardPosition'
+            The winning sequence object, containing the type of win and a length
+            5 array of winning points on the game board.
+          $ref: '#/components/schemas/WinningSequence'
 paths:
   /games:
     post:
@@ -238,10 +268,12 @@ paths:
       tags:
         - Games
       summary: >-
-        Get a list of games. This request returns all the completed game winning
-        sequences as an array. This is primarily used for development and
-        testing to ensure that all different possible winning sequences are
-        tested and result in a win being declared.
+        Get a list of ended games. This request returns data about the last 100
+        completed games. For each game the return data is the number of hands
+        played, the winner and the winning sequence. This endpoint is primarily
+        used for statistics and development to ensure that all different
+        possible winning sequences are tested and result in a win being
+        declared.
       operationId: Get a list of games
       security:
         - bearerAuth: []
@@ -252,8 +284,9 @@ paths:
             application/json:
               schema:
                 type: array
+                description: Array of GameOutcome objects
                 items:
-                  $ref: '#/components/schemas/WinningSequence'
+                  $ref: '#/components/schemas/GameOutcome'
         '401':
           description: unauthorised - invalid Authorisation Bearer token
   '/games/{code}/players':
